--- a/Zuri iOS/Base.lproj/LaunchScreen.storyboard
+++ b/Zuri iOS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,20 +14,26 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lkm-Uo-YCc">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="428" height="848"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash1" translatesAutoresizingMaskIntoConstraints="NO" id="RBJ-9q-8N6">
-                                        <rect key="frame" x="135" y="341" width="144" height="136"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash2" translatesAutoresizingMaskIntoConstraints="NO" id="RBJ-9q-8N6">
+                                        <rect key="frame" x="128" y="345.66666666666669" width="172" height="157"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 8778" translatesAutoresizingMaskIntoConstraints="NO" id="l0R-Iv-JQ0">
+                                        <rect key="frame" x="72" y="826" width="284" height="14"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="l0R-Iv-JQ0" secondAttribute="trailing" constant="72" id="LWb-lz-NpF"/>
+                                    <constraint firstAttribute="bottom" secondItem="l0R-Iv-JQ0" secondAttribute="bottom" constant="8" id="NE2-bk-5nr"/>
                                     <constraint firstItem="RBJ-9q-8N6" firstAttribute="centerY" secondItem="Lkm-Uo-YCc" secondAttribute="centerY" id="VLx-Ry-6VH"/>
                                     <constraint firstItem="RBJ-9q-8N6" firstAttribute="centerX" secondItem="Lkm-Uo-YCc" secondAttribute="centerX" id="c9T-Rp-D3V"/>
+                                    <constraint firstItem="l0R-Iv-JQ0" firstAttribute="leading" secondItem="Lkm-Uo-YCc" secondAttribute="leading" constant="72" id="emG-gB-4dY"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -42,11 +49,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="splash1" width="144" height="136"/>
+        <image name="Group 8778" width="149" height="14"/>
+        <image name="splash2" width="172" height="157"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
